<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/guidesFragment"
        android:name="com.drasare.cancerscreening.ui.guides.GuidesFragment"
        android:label="GUIDES"
        tools:layout="@layout/fragment_guides">
        <action
            android:id="@+id/action_guidesFragment_to_guidesPlayerFragment2"
            app:destination="@id/guidesPlayerFragment" />
    </fragment>
    <fragment
        android:id="@+id/surveyFragment"
        android:name="com.drasare.cancerscreening.ui.survey.SurveyFragment"
        android:label="SURVEY"
        tools:layout="@layout/survey_fragment" />
    <fragment
        android:id="@+id/qnAFragment"
        android:name="com.drasare.cancerscreening.ui.qna.QnAFragment"
        android:label="@string/qn_a_fragment_label"
        tools:layout="@layout/qn_a_fragment" />
    <fragment
        android:id="@+id/guidesPlayerFragment"
        android:name="com.drasare.cancerscreening.GuidesActivity"
        android:label="fragment_guides_player"
        tools:layout="@layout/fragment_guides_player" >
        <action
            android:id="@+id/action_guidesPlayerFragment_pop2"
            app:popUpTo="@id/guidesPlayerFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.drasare.cancerscreening.ui.result.ResultFragment"
        android:label="@string/result_fragment_label"
        tools:layout="@layout/result_fragment" />
    <fragment
        android:id="@+id/pickupFragment"
        android:name="com.drasare.cancerscreening.ui.pickup.PickupFragment"
        android:label="PICKUP KIT"
        tools:layout="@layout/pickup_fragment" />
    <fragment
        android:id="@+id/requestKitFragment"
        android:name="com.drasare.cancerscreening.ui.kit.RequestKitFragment"
        android:label="REQUEST KIT"
        tools:layout="@layout/fragment_request_kit" />
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.drasare.cancerscreening.ui.main.MainFragment"
        android:label="CERVICAL CANCER"/>
    <fragment
        android:id="@+id/provideFragment"
        android:name="com.drasare.cancerscreening.ui.provider.ProvideFragment"
        android:label="@string/providers_fragment_label" />
</navigation>
