<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/_2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/one"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:elevation="@dimen/_4dp"
                    android:layout_margin="@dimen/_4dp"
                    android:layout_marginRight="@dimen/_2dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:paddingTop="@dimen/_2dp"
                        android:layout_height="match_parent">

                        <com.pkmmte.view.CircularImageView
                            android:id="@+id/guide_image"
                            android:layout_width="120dp"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content"
                            android:src="@drawable/lec">
                        </com.pkmmte.view.CircularImageView>

                        <TextView
                            android:id="@+id/guide_title"
                            style="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_2dp"
                            android:text="@string/fragment_guides_label"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:textStyle="bold"
                            android:textColor="@color/transparent" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/two"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_4dp"
                    android:layout_marginLeft="@dimen/_2dp"
                    android:elevation="@dimen/_4dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:paddingTop="@dimen/_2dp"
                        android:layout_height="match_parent">

                        <com.pkmmte.view.CircularImageView
                            android:id="@+id/req_image"
                            android:layout_width="120dp"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content"
                            android:src="@drawable/kit">
                        </com.pkmmte.view.CircularImageView>

                        <TextView
                            android:id="@+id/req_title"
                            style="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_2dp"
                            android:text="@string/kit_fragment_label"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:textStyle="bold"
                            android:textColor="@color/transparent" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/three"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:elevation="@dimen/_4dp"
                    android:layout_margin="@dimen/_4dp"
                    android:layout_marginRight="@dimen/_2dp"
                    android:layout_weight="1">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:paddingTop="@dimen/_2dp"
                        android:layout_height="match_parent">

                        <com.pkmmte.view.CircularImageView
                            android:id="@+id/pkup_image"
                            android:src="@drawable/pkup"
                            android:elevation="@dimen/_4dp"
                            android:layout_width="120dp"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content">
                        </com.pkmmte.view.CircularImageView>

                        <TextView
                            android:id="@+id/pkup_title"
                            style="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_2dp"
                            android:text="@string/pickup_fragment_label"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:textStyle="bold"
                            android:textColor="@color/transparent" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/four"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_4dp"
                    android:layout_marginLeft="@dimen/_2dp"
                    android:elevation="@dimen/_4dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:paddingTop="@dimen/_2dp"
                        android:layout_height="match_parent">

                        <com.pkmmte.view.CircularImageView
                            android:id="@+id/prov_image"
                            android:src="@drawable/provider"
                            android:layout_width="120dp"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content">
                        </com.pkmmte.view.CircularImageView>

                        <TextView
                            android:id="@+id/prov_title"
                            style="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_2dp"
                            android:text="@string/providers_fragment_label"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:textStyle="bold"
                            android:textColor="@color/transparent"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/five"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:elevation="@dimen/_4dp"
                    android:layout_margin="@dimen/_4dp"
                    android:layout_marginRight="@dimen/_2dp"
                    android:layout_weight="1">
                    <RelativeLayout
                        android:paddingTop="@dimen/_2dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.pkmmte.view.CircularImageView
                            android:id="@+id/test_image"
                            android:elevation="@dimen/_4dp"
                            android:src="@drawable/labresult"
                            android:layout_width="120dp"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content">
                        </com.pkmmte.view.CircularImageView>

                        <TextView
                            android:id="@+id/test_title"
                            style="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_2dp"
                            android:text="@string/test"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:textStyle="bold"
                            android:textColor="@color/transparent" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/six"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_4dp"
                    android:layout_marginLeft="@dimen/_2dp"
                    android:elevation="@dimen/_4dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:paddingTop="@dimen/_2dp"
                        android:layout_height="match_parent">

                        <com.pkmmte.view.CircularImageView
                            android:id="@+id/survey_image"
                            android:src="@drawable/suvey"
                            android:layout_width="120dp"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content">
                        </com.pkmmte.view.CircularImageView>

                        <TextView
                            android:id="@+id/survey_title"
                            style="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_2dp"
                            android:text="@string/survey_fragment_label"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:textStyle="bold"
                            android:textColor="@color/transparent" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/seven"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="@dimen/_4dp"
                    android:layout_margin="@dimen/_4dp"
                    android:layout_marginRight="@dimen/_2dp"
                    android:layout_marginLeft="@dimen/_2dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.pkmmte.view.CircularImageView
                            android:id="@+id/qna_image"
                            android:src="@drawable/qna"
                            android:elevation="@dimen/_4dp"
                            android:layout_width="120dp"
                            android:layout_marginTop="@dimen/_8dp"
                            android:layout_centerInParent="true"
                            android:layout_height="wrap_content">
                        </com.pkmmte.view.CircularImageView>

                        <TextView
                            android:id="@+id/qna_title"
                            style="@style/TextAppearance.AppCompat.Headline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_2dp"
                            android:text="@string/qn_a_fragment_label"
                            android:layout_centerHorizontal="true"
                            android:layout_alignParentBottom="true"
                            android:textStyle="bold"
                            android:textColor="@color/transparent" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_4dp"
                    android:layout_marginLeft="@dimen/_2dp"
                    android:layout_weight="1.5"></LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>